--- a/public/assets/create.html
+++ b/public/assets/create.html
@@ -83,7 +83,7 @@
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label class="col-sm-6 col-form-label">Weights</label>
+                    <label class="col-sm-6 col-form-label">Weight (lb)</label>
                     <div class="col-sm-6">
                         <input type="number" class="form-control" id="weights">
                     </div>
