--- a/public/assets/view.html
+++ b/public/assets/view.html
@@ -12,10 +12,9 @@
 
 <body>
     <div class="jumbotron">
-        <h1 class="display-4">Welcome back!</h1>
-        <p class="lead">View and track your stats in dashboard or create daily workouts.</p>
-        <a id="create-btn" class="btn btn-primary btn-lg" href="/create-workout" role="button">Create Workout</a>
-        <a class="btn btn-primary btn-lg" href="/view-workout" role="button">Continue Workout</a>
+        <h1 class="display-4">Start Workout</h1>
+        <p class="lead">View your workout or add exercise to workout.</p>
+        <a class="btn btn-primary btn-lg" href="/add-exercise" role="button">Add Exercise</a>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
