modified view workout button

--- a/public/assets/view.html
+++ b/public/assets/view.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="jumbotron">
-        <h1 class="display-4">Start Workout</h1>
+        <h1 class="display-4">Your Workouts</h1>
         <p class="lead">View your workout or add exercise to workout.</p>
         <a class="btn btn-primary btn-lg" href="/add-exercise" role="button">Add Exercise</a>
     </div>
