--- a/public/assets/create.html
+++ b/public/assets/create.html
@@ -69,7 +69,8 @@
                     </div>
                 </div>
                 <button type="submit" class="btn btn-primary">Add Exercise</button>
-                <button type="button" class="btn btn-primary">View Workout</button>
+                <a class="btn btn-primary" href="/view-workout" role="button">View Workout</a>
+                <!-- <button type="button" class="btn btn-primary">View Workout</button> -->
             </form>
 
             <form id="resistanceForm">
@@ -124,7 +125,8 @@
                     </div>
                 </div>
                 <button type="submit" class="btn btn-primary" value="Add Exercise"></button>
-                <button type="button" class="btn btn-primary">View Workout</button>
+                <!-- <button type="button" class="btn btn-primary view-btn">View Workout</button> -->
+                <a class="btn btn-primary" href="/view-workout" role="button">View Workout</a>
             </form>
         </div>
     </div>
