--- a/public/assets/view.html
+++ b/public/assets/view.html
@@ -14,10 +14,12 @@
     <div class="jumbotron">
         <h1 class="display-4">Your Workouts</h1>
         <p class="lead">View your workout or add exercise to workout.</p>
-        <a class="btn btn-primary btn-lg" href="/add-exercise" role="button">Add Exercise</a>
+        <!-- <a class="btn btn-primary btn-lg" href="/add-exercise" role="button">Add Exercise</a> -->
     </div>
+    <div class="container"></div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
