fixed view page display functionality

--- a/public/assets/create.html
+++ b/public/assets/create.html
@@ -14,7 +14,7 @@
     <div class="jumbotron">
         <h1 class="display-4">Create workouts!</h1>
         <p class="lead">Add exercises to your workout routine.</p>
-        <!-- <a class="btn btn-primary btn-lg" href="index.html" role="button">Dashboard</a> -->
+        <a class="btn btn-primary btn-lg" href="/" role="button">Dashboard</a>
     </div>
     <div class="card">
         <!-- <div class="card-header">
@@ -69,7 +69,6 @@
                     </div>
                 </div>
                 <button type="submit" class="btn btn-primary">Add Exercise</button>
-                <a class="btn btn-primary" href="/view-workout" role="button">View Workout</a>
             </form>
 
             <form id="resistanceForm">
@@ -124,8 +123,9 @@
                     </div>
                 </div>
                 <button type="submit" class="btn btn-primary" value="Add Exercise"></button>
-                <a class="btn btn-primary" href="/view-workout" role="button">View Workout</a>
+                <!-- <a class="btn btn-primary" href="/view-workout" role="button">View Workout</a> -->
             </form>
+            <a class="btn btn-primary" href="/view-workout" role="button">View Workout</a>
         </div>
     </div>
 
