--- a/public/assets/view.html
+++ b/public/assets/view.html
@@ -14,8 +14,9 @@
     <div class="jumbotron">
         <h1 class="display-4">Your Workouts</h1>
         <p class="lead">View your workout or add exercise to workout.</p>
+        <a class="btn btn-primary btn-lg" href="/" role="button">Dashboard</a>
     </div>
-    
+
     <div class="container"></div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
