--- a/public/assets/create.html
+++ b/public/assets/create.html
@@ -122,7 +122,7 @@
                         <input type="number" class="form-control" id="duration">
                     </div>
                 </div>
-                <button type="submit" class="btn btn-primary" value="Add Exercise"></button>
+                <button type="submit" class="btn btn-primary">Add Exercise</button>
                 <!-- <a class="btn btn-primary" href="/view-workout" role="button">View Workout</a> -->
             </form>
             <a class="btn btn-primary" href="/view-workout" role="button">View Workout</a>
