--- a/public/assets/create.html
+++ b/public/assets/create.html
@@ -14,7 +14,7 @@
     <div class="jumbotron">
         <h1 class="display-4">Create workouts!</h1>
         <p class="lead">Add exercises to your workout routine.</p>
-        <a class="btn btn-primary btn-lg" href="/" role="button">Dashboard</a>
+        <a class="btn btn-primary btn-lg" href="/" role="button">Home</a>
     </div>
     <div class="card">
         <!-- <div class="card-header">
@@ -129,7 +129,8 @@
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
