--- a/public/assets/index.html
+++ b/public/assets/index.html
@@ -14,8 +14,8 @@
     <div class="jumbotron">
         <h1 class="display-4">Welcome back!</h1>
         <p class="lead">View and track your stats in dashboard or create daily workouts.</p>
-        <a id="create-btn" class="btn btn-primary btn-lg" href="/create-workout" role="button">Create Workout</a>
-        <a class="btn btn-primary btn-lg" href="/view-workout" role="button">Continue Workout</a>
+        <a id="create-btn" class="btn btn-secondary btn-lg" href="/create-workout" role="button">Create Workout</a>
+        <a class="btn btn-secondary btn-lg" href="/view-workout" role="button">Continue Workout</a>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
