--- a/public/assets/view.html
+++ b/public/assets/view.html
@@ -14,7 +14,8 @@
     <div class="jumbotron">
         <h1 class="display-4">Your Workouts</h1>
         <p class="lead">View your workout or add exercise to workout.</p>
-        <a class="btn btn-primary btn-lg" href="/" role="button">Home</a>
+        <a class="btn btn-secondary btn-lg" href="/" role="button">Home</a>
+        <a class="btn btn-secondary btn-lg" href="/create-workout" role="button">Add Exercise</a>
     </div>
 
     <div class="container"></div>
